# autodiff-rust

./: Cargo.toml  Readme.md  justfile
crates/ad_artifacts/: Cargo.toml
crates/ad_artifacts/src/: argmax_discrete.rs  branch_equal_zero.rs  log1p_exp.rs  main.rs  non_smoth_func.rs  round_floor_ceil.rs
crates/enzyme_base/: Cargo.toml  Readme.md
crates/enzyme_base/src/: array.rs  generic.rs  main.rs  method.rs  ndarray.rs  scalar.rs  slice.rs  unsafe_rev_mode.rs
crates/fake_cblas/: Cargo.toml  Readme.md  rust-toolchain.toml
crates/fake_cblas/src/: main.rs
crates/forward_mode/: Cargo.toml  Readme.md
crates/forward_mode/src/: dual_numbers.rs  main.rs  naive_dual_numbers.rs
crates/regression/: Cargo.toml  Readme.md
crates/regression/src/: data.rs  main.rs  mle.rs  plot.rs  simple.rs
crates/reverse_mode/: Cargo.toml  Readme.md
crates/reverse_mode/src/: main.rs
presentation/: slides.typ
presentation/img/: cdagt.odg  rustc_pipeline.odg
py/: codegen.py  grad.py
